...
    <string name="lowcardspacedialog">You have %%% MB of storage space left on this device\'s SD card. Once the SD card is full, you will no longer be able to collect data.</string>
    <string name="getgeo">Capture Location</string>
    <string name="updategeo">Recapture Location</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="elevation">Height</string>
    <string name="submitbutton">Submit</string>
    <string name="geodialog">Please enable location settings</string>
    <string name="settings">Settings</string>
    <string name="preferences_general_section">General</string>
    <string name="aboutlabel">About</string>
    <string name="otherinstructions">Please enter a description</string>
    <string name="deleteresponse">Delete Response</string>
...
    <string name="toolargeerr">Value is too large. Maximum value: </string>
    <string name="baddatatypeerr">Answer must be numeric</string>
    <string name="reloadsurveyslabel">Reload all surveys</string>
    <string name="reloadsurveysdesc">Deletes and re-downloads assigned surveys (only run if instructed)</string>
    <string name="conftitle">Please Confirm</string>
    <string name="reloadconftext">Are you sure you want to purge and re-download surveys?</string>
    <string name="langoption">Languages</string>
    <string name="langmandatorytitle">Invalid Selection</string>
    <string name="langmandatorytext">You must select at least one language</string>
    <string name="preference_download_form_title">Download form using form ID</string>
    <string name="preference_download_form_subtitle">Only run if instructed</string>
    <string name="downloadsurveylabel">Download Form</string>
    <string name="downloadsurveyinstr">Enter the form id you wish to download.</string>
    <string name="deletealldatawarning">This will permanently delete all data (surveys, responses, images, and users) on the device. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="delete_responses_warning">This will permanently delete responses, images, and zip files on the device. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="unsentdatawarning">Some responses are not submitted. Make sure you export them before deletion. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="deleteonewarning">This will permanently delete this survey response. Click OK to proceed or cancel to abort.</string>
    <string name="nextbutton">Next</string>
    <string name="cleartitle">Clear Survey Answers</string>
    <string name="cleardesc">Are you sure you want to clear your responses?</string>
    <string name="clearquestion">Clear Response</string>
    <string name="clearquestiondesc">Do you want to clear the response to this question?</string>
    <string name="identlabel">Device Identifier</string>
    <string name="bootstrapstart">Loading survey data from SD card</string>
...
    <string name="data_sync_error_form_deleted_text">Form %1$s has been deleted</string>
    <!--Empty Views-->
    <string name="no_datapoints_error_text">You have no data points</string>
    <string name="no_search_results_error_text">No results found</string>
    <string name="no_survey_selected_text">You have no Survey selected. Open the side menu to select one.</string>
    <!--ToolBar-->
    <string name="more">More</string>
    <!--Search-->
    <string name="search_hint">Search Data Point</string>
    <!--Project List (Survey Group) Activity-->
    <string name="delete_survey_dialog_message">Delete %1$s?</string>
    <!--Survey Activity-->
    <string name="error_responses">Some responses contain errors. You must review the following questions before you can submit:</string>
...
    <!--Navigation Drawer-->
    <string name="add_user">Add User</string>
    <string name="new_user">+ User</string>
    <string name="edit_user">Edit username</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_user_confirmation">Delete user?</string>
    <string name="username">Username</string>
    <string name="mustselectuser">Please select a user before continuing</string>
    <string name="surveys">Surveys</string>
    <string name="logged_in_as">Logged in as</string>
    <!--Misc-->
    <string name="okbutton">OK</string>
    <string name="delete_button">Delete</string>
    <string name="cancelbutton">Cancel</string>
    <string name="savebutton">Save</string>
    <string name="clearbutton">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!--app update service -->
    <string name="apk_update_service_no_update">You are running the latest version of the app.</string>
    <string name="apk_update_service_error_update">There was an error when updating the app. Please try again.</string>
    <string name="apk_update_service_error_no_internet">There was an error when updating the app. You are not connected to the internet.</string>
...
