...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.akvo.flow.presentation.settings.PreferenceActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/FlowAppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/FlowAppTheme.PopupOverlay"/>
...
                    style="@style/PreferenceSwitch"/>

            <View
                    style="@style/PreferenceItemSeparator"/>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_enable_data"
                    android:text="@string/preference_upload_mobile_data"
                    style="@style/PreferenceSwitch"/>

            <View
                    style="@style/PreferenceItemSeparator"/>

...
