...
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:singleLine="true"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/device_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/identlabel"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textSize="24sp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/nextbutton"
...
