<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flowapp="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/more_submenu"
        android:icon="@drawable/ic_more"
        android:orderInCategory="100"
        android:title="@string/more"
        flowapp:showAsAction="always">

        <menu>

            <item
                android:id="@+id/view_map"
                android:title="@string/view_map" />
        </menu>

    </item>

</menu>